--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@jackmacwindows/lua-types": "^2.13.2",
     "@jackmacwindows/typescript-to-lua": "^1.28.1",
     "@sikongjueluo/advanced-peripherals-types": "file:types/advanced-peripherals",
-    "@sikongjueluo/toml2lua-types": "file:types/toml2lua",
-    "@sikongjueluo/dkjson-types": "file:types/dkjson",
+    "@sikongjueluo/dkjson-types": "file:thirdparty/dkjson",
+    "@sikongjueluo/toml2lua-types": "file:thirdparty/toml2lua",
     "@typescript-to-lua/language-extensions": "^1.19.0",
     "eslint": "^9.36.0",
     "typescript": "^5.7.2",
